Minor cleanup before PR review